# sneakyAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md
sneakyagent/: cli.py  models.py  utils.py
sneakyagent/agent/: __init__.py  llm.py  mock.py  runner.py
sneakyagent/analyze/: __init__.py  analyzer.py
sneakyagent/data/: patterns.yaml  rules.yaml
sneakyagent/poison/: __init__.py  applier.py  catalog.py  ga.py  heuristic.py  llm.py  mutations.py  strategy.py
sneakyagent/report/: __init__.py  writer.py
sneakyagent/scanner/: __init__.py  scan.py
sneakyagent/storage/: __init__.py  manifest.py
